<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TokenActivity"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_profiqlogo"
                android:contentDescription="@string/openid_logo_content_description"/>

            <!--
            displayed while token requests are occurring
            -->
            <LinearLayout
                android:id="@+id/loading_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/loading_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"/>

            </LinearLayout>

            <!-- Shown when authorization has failed. -->
            <LinearLayout
                android:id="@+id/not_authorized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/not_authorized"
                    style="@style/Base.TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/explanation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp" />

                <Button
                    android:id="@+id/reauth"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:background="@color/colorPrimaryDark"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
                    android:textColor="@color/colorAccent"
                    android:text="@string/reauthorize" />

            </LinearLayout>

            <!-- Shown when the user is authorized, and there are no pending operations -->
            <LinearLayout
                android:id="@+id/authorized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/auth_granted"
                    style="@style/Base.TextAppearance.AppCompat.Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/refresh_token"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_margin="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:text="@string/refresh_token"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored" />

                    <Button
                        android:id="@+id/view_profile"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_margin="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:text="@string/view_profile"
                        android:textColor="@color/colorAccent" />

                    <Button
                        android:id="@+id/sign_out"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_margin="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/sign_out"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>

                <TextView
                    android:id="@+id/refresh_token_info"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Refresh token returned"
                    style="@style/Base.TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/access_token_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Token expires at: 2016-01-01 12:00 UTC"
                    style="@style/Base.TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/id_token_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    tools:text="ID token returned"
                    style="@style/Base.TextAppearance.AppCompat.Body1" />

                <LinearLayout
                    android:id="@+id/userinfo_card"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp">

                    <LinearLayout
                        android:id="@+id/profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:id="@+id/userinfo_profile"
                            android:contentDescription="@string/userinfo_profile_content_description"
                            app:srcCompat="@drawable/unknown_user_48dp" />

                        <TextView
                            android:id="@+id/userinfo_name"
                            android:layout_weight="2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingStart="8dp"
                            android:paddingRight="0dp"
                            android:paddingEnd="0dp"
                            tools:text="Jane Doe"
                            style="@style/Base.TextAppearance.AppCompat.Title" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/username_title"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_weight="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="0dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="0dp"
                            android:paddingStart="8dp"
                            android:text="@string/username_title" />

                        <TextView
                            android:id="@+id/username_value"
                            style="@style/Base.TextAppearance.AppCompat.Title"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="0dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="0dp"
                            android:paddingStart="8dp"
                            tools:text="..." />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/user_type"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/user_type_title"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_weight="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="0dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="0dp"
                            android:paddingStart="8dp"
                            android:text="@string/user_type_title" />

                        <TextView
                            android:id="@+id/user_type_value"
                            style="@style/Base.TextAppearance.AppCompat.Title"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="0dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="0dp"
                            android:paddingStart="8dp"
                            tools:text="..." />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/account_type"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/account_type_title"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_weight="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="0dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="0dp"
                            android:paddingStart="8dp"
                            android:text="@string/account_type_title" />

                        <TextView
                            android:id="@+id/account_type_value"
                            style="@style/Base.TextAppearance.AppCompat.Title"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="0dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="0dp"
                            android:paddingStart="8dp"
                            tools:text="..." />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/country_title"
                            style="@style/Base.TextAppearance.AppCompat.Small"
                            android:layout_weight="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="0dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="0dp"
                            android:paddingStart="8dp"
                            android:text="@string/country" />

                        <TextView
                            android:id="@+id/country_value"
                            style="@style/Base.TextAppearance.AppCompat.Title"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="0dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="0dp"
                            android:paddingStart="8dp"
                            tools:text="..." />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/userinfo_json"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:visibility="gone"
                        tools:text="{'blah': 'blah'}" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
